--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,35 +3,48 @@
   padding: 0;
   box-sizing: border-box;
 }
-
 body{
   font-family: 'Montserrat', sans-serif;
   font-weight: 500;
 }
-
 .f-weight-600{
 font-weight: 600;
 }
-
 .f-weight-700{
 font-weight: 700;
 }
-
 .clearfix::after{
   content: "";
   display: table;
   clear: both;
 }
-
 .float-left{
   float: left;
 }
-
 .text-white{
   color: #FFFFFF;
 }
 .text-grey{
   color: #848484;
+}
+.text-box-grey{
+  color: #6D6D6D;
+}
+.line-height-40{
+  line-height:40px ;
+}
+.flex-vertical-center{
+  display: flex;
+  align-items: center;
+}
+.padding-left-20{
+  padding-left: 20px;
+}
+ul{
+  list-style: none;
+}
+a{
+  text-decoration: none;
 }
 
 /* SEZIONE NAV */
@@ -39,7 +52,113 @@ font-weight: 700;
   background-color:#000000 ;
   width: 230px;
   height: calc(100vh - 90px);
+  overflow: hidden;
 }
+.logo{
+  height: 80px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+.nav-col .logo img{
+  width: 60%;
+  margin-left: 20px;
+}
+.max-box-nav-1{
+  overflow: hidden;
+  height: calc(100% - 70px);
+  min-height: 300px;
+}
+/* primo box nav */
+.nav-col .first-box-nav img{
+  width: 25px;
+  margin-left:20px;
+  margin-right:5px;
+}
+.nav-col .first-box-nav span{
+  font-size: 12px;
+}
+.nav-col .first-box-nav .home{
+  border-left: 3px solid #ADFF2F;
+}
+/*/ primo box nav */
+
+/* secondo box nav */
+.second-box-nav .playlist h4{
+  text-transform: uppercase;
+  margin-top:10px;
+  font-size: 13px;
+}
+.second-box-nav .playlist .add-playlist{
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+}
+.second-box-nav .playlist .add-playlist span{
+  font-size: 14px;
+}
+.second-box-nav .playlist .add-playlist i{
+ padding: 10px;
+ font-size: 20px;
+ margin-right: 10px;
+ background-color: #A3A3A3;
+}
+/*/ secondo box nav */
+
+/* terzo box nav */
+.third-box-nav{
+  height: 50%;
+}
+.playlist-list ul li a{
+ line-height: 30px;
+ font-size: 13px;
+}
+.playlist-list ul{
+  overflow-y: auto;
+  height: 60%;
+}
+.playlist-list{
+  height: 100%;
+}
+/*/ terzo box nav */
+/* secondo max box */
+.max-box-nav-2{
+  height: 70px;
+}
+.max-box-nav-2 .install{
+  display: flex;
+  align-items: center;
+}
+.max-box-nav-2 .profile{
+  display: flex;
+  align-items: center;
+}
+.install img{
+  width: 13px;
+}
+.install span{
+  font-size: 13px;
+  margin-left: 10px;
+}
+.profile{
+  margin-bottom: 10px;
+}
+.profile img{
+  width: 20px;
+  height: 20px;
+  background-color:#808080 ;
+  border-radius: 50%;
+}
+.profile span{
+  font-size: 14px;
+  margin-left: 10px;
+}
+.line-nav-download{
+  width: 190px;
+  margin: 10px 20px 10px 0px ;
+  border: 1px solid #6D6D6D ;
+}
+/* /secondo max box */
 /* /SEZIONE NAV */
 
 /* SEZIONE CONTENUTI */
@@ -49,7 +168,6 @@ font-weight: 700;
   background-color:#141922 ;
   overflow: auto;
 }
-
 .fix-bar{
   height: 90px;
   background-color: rgba(0, 0, 0, 0.4);
@@ -58,10 +176,43 @@ font-weight: 700;
   left: 230px;
   right: 0;
   width: calc(100% - 230px);
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
-
-.fake{
-  margin-top: 90px;
+.fix-bar a{
+  border-radius: 30px;
+  border: 1px solid #E0E0E1;
+  color: #E0E0E1;
+  padding: 10px 35px;
+  text-transform: uppercase;
+  margin-right: 5px;
+}
+.list-contenents {
+ margin-top:110px ;
+ text-align: center;
+}
+.list-contenents ul{
+ display: flex;
+ width: 50%;
+ margin: auto;
+ justify-content: space-between;
+}
+.list-contenents ul li{
+ display: inline;
+}
+.list-contenents ul li a{
+ text-transform: uppercase;
+ color: #7B7D82;
+}
+.list-contenents ul li .green-line{
+  width: 50%;
+  margin: auto;
+  border: 1px solid #ADFF2F;
+  margin-top: 5px;
+}
+.green-line-none{
+  display: none;
 }
 /* /SEZIONE CONTENUTI */
 
