--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,6 +49,9 @@ a{
 .text-center{
   text-align: center;
 }
+.display-none{
+  display: none;
+}
 /* SEZIONE NAV */
 .nav-col{
   background-color:#000000 ;
@@ -77,7 +80,7 @@ a{
   margin-left:20px;
   margin-right:5px;
 }
-.nav-col .first-box-nav span{
+.nav-col .first-box-nav a{
   font-size: 12px;
 }
 .nav-col .first-box-nav .home{
@@ -138,7 +141,7 @@ a{
 .install img{
   width: 13px;
 }
-.install span{
+.install a{
   font-size: 13px;
   margin-left: 10px;
 }
@@ -151,7 +154,7 @@ a{
   background-color:#808080 ;
   border-radius: 50%;
 }
-.profile span{
+.profile a{
   font-size: 14px;
   margin-left: 10px;
 }
@@ -161,6 +164,65 @@ a{
   border: 1px solid #6D6D6D ;
 }
 /* /secondo max box */
+@media (max-width:749px){
+  .nav-col{
+    width: 50px;
+  }
+  .logo, 
+  .home, 
+  .search,
+  .library,
+  .second-box-nav,
+  .third-box-nav,
+  .line-nav-download,
+  .install,
+  .profile,
+  .text-box-grey,
+  .install img,
+  .profile span,
+  .profile img{
+    display: none;
+  }
+  .logo-xs,
+  .home-xs,
+  .search-xs,
+  .library-xs,
+  .install-xs,
+  .profile-xs{
+    display: block;
+  }
+  .logo-xs img,
+  .home-xs img,
+  .search-xs img,
+  .library-xs img,
+  .profile-xs img{
+    width: 25px;
+  }
+  .logo-xs img,
+  .home-xs img,
+  .search-xs img,
+  .library-xs img{
+    margin-top: 15px;
+  }
+  .nav-col .first-box-nav img {
+    margin: 15px calc(25px/2) 0px calc(25px/2);
+  }
+  .install-xs img{
+   width: 20px;
+  }
+  .max-box-nav-2,
+  .logo-xs img{
+   padding: 0;
+   margin-left: calc(25px/2);
+  } 
+
+  .profile-xs img{
+    height: 25px;
+    background-color:#808080 ;
+    border-radius: 50%;
+  }
+
+}
 /* /SEZIONE NAV */
 
 /* SEZIONE CONTENUTI */
@@ -189,7 +251,7 @@ a{
   color: #E0E0E1;
   padding: 10px 35px;
   text-transform: uppercase;
-  margin-right: 5px;
+  margin-right: 25px;
 }
 /*/ barra fixata */
 /* lista contenuti */
@@ -199,12 +261,14 @@ a{
 }
 .list-contenents ul{
  display: flex;
- width: 50%;
+ width: 100%;
  margin: auto;
- justify-content: space-between;
+ justify-content: center;
+ flex-wrap: wrap;
 }
 .list-contenents ul li{
  display: inline;
+ margin: 0px 15px;
 }
 .list-contenents ul li a{
  text-transform: uppercase;
@@ -236,7 +300,6 @@ a{
 .list-recently ul li{
   width: calc(100%/6);
   padding: 10px;
-  display: inline-block;
 }
 .list-recently ul li img{
   width: 100%;
@@ -260,6 +323,66 @@ a{
   border-radius: 50%;
 }
 /* /lista artisti */
+@media (min-width:970px) and (max-width:1199px){
+  .list-recently ul li{
+    width: calc(100%/4);
+  }
+  .list-recently ul li h4{
+    font-size: 20px;
+  }
+  .fix-bar a{
+    margin-right: 20px;
+  }
+}
+
+@media (min-width:750px) and (max-width:969px){
+  .list-contenents ul li{
+    width: calc(100%/4);
+    margin-bottom: 30px;
+  }
+  .list-recently ul li{
+    width: calc(100%/2);
+  }
+  .fix-bar a{
+    margin-right: 20px;
+  }
+}
+
+@media (max-width:749px){
+  .list-contenents ul li{
+    width: calc(100%/5);
+    margin: 0px 5px 30px 5px;
+  }
+  .list-contenents ul li a{
+    font-size: 10px;
+   }
+  .list-recently ul li{
+    width: calc(100%/2);
+  }
+  .fix-bar a{
+    margin-right: 20px;
+  }
+  .list-recently ul li h4{
+    font-size: 15px;
+  }
+  .list-recently ul li span{
+    font-size: 10px;
+  }
+  .list-contenents ul li .green-line{
+    width: 30px;
+  }
+  .fix-bar{
+    position: fixed;
+    top: 0;
+    left: 50px;
+    right: 0;
+    width: calc(100% - 50px);
+    
+  }
+  .contenents{
+    width: calc(100% - 50px);
+  }
+}
 /* /SEZIONE CONTENUTI */
 
 /* SEZIONE BARRA PLAY */
@@ -325,7 +448,6 @@ footer {
   height: 90px;
   display: flex;
   flex-direction: column;
-  display: flex;
   justify-content: space-evenly;
   align-items: center;
 }
